Added tracking link to the main HP site. Updated description to be bullets instead of text. Took out the (+2 futons) in one of the listings to it sorts correctly.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>A <a href="http://hackerparadise.org/">Hacker Paradise</a> project.</li>
+          <li>A <a href="http://www.hackerparadise.org/?utm_source=bottom-link&utm_medium=side-project&utm_campaign=airbnb-retreats">Hacker Paradise</a> project.</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
